--- a/package.json
+++ b/package.json
@@ -12,18 +12,28 @@
     "@expo-google-fonts/noto-serif-jp": "^0.2.3",
     "@expo/dev-server": "^0.5.5",
     "@expo/metro-config": "^0.19.6",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/slider": "^4.5.5",
+    "@react-native-firebase/app": "^19.3.0",
+    "@react-native-firebase/auth": "^21.6.1",
+    "@react-native-firebase/database": "^19.3.0",
+    "@react-native-firebase/firestore": "^21.6.1",
     "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/bottom-tabs": "^7.1.3",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/stack": "^7.0.18",
     "expo": "^52.0.17",
+    "expo-document-picker": "^13.0.1",
     "expo-status-bar": "~2.0.0",
+    "firebase": "^11.0.2",
     "metro": "^0.81.0",
     "metro-config": "^0.81.0",
     "moment-timezone": "^0.5.46",
     "react": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-date-picker": "^5.0.7",
+    "react-native-document-picker": "^9.3.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.14.1",
